--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro Template</title>
 </head>
+
 <body>
-    <h1>Hello, World! Template</h1>
+    <h1>Lista de Posts Cadastrados</h1>
+
+    <ul>
+        {% for post in posts %}
+            <a href="{% url 'post_detail' post.id %}"> {{ post.titulo }} - {{ post.autor }} </a>
+            <br>
+        {% endfor %}
+    </ul>
 </body>
+
 </html>
