#04 Check point 1. configuração de arquivos estáticos. 2. configuração do CKEDITOR.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -17,6 +17,10 @@
             <br>
         {% endfor %}
     </ul>
+
+    {% load static %}
+
+    <img src="{% static 'blog/python-django-1.png' %}">
 </body>
 
 </html>
